--- a/app/views/auth/login.html
+++ b/app/views/auth/login.html
@@ -11,7 +11,7 @@
     <!-- ********************************************************************
         $ LOGIN
     ********************************************************************* -->
-    <section class="login-cover">
+    <section class="login-cover" style="min-height: 600px;">
         <div class="login-box js-loginBox">
             <header class="login-box__header">
                 <div class="skinny-menu">
@@ -29,11 +29,11 @@
                     <span class="text">Con email</span>
                     <span class="line"></span>
                 </div>
-                <input class="input" data-size='large' name="username" placeholder="Username" type="text">
+                <input class="input" data-size='large' name="username" placeholder="Nombre de usuario" type="text">
                 <input class="input" data-size='large' name="email" placeholder="Email" type="email">
-                <input class="input" data-size='large' name="password" placeholder="Password" type="password">
-                <input class="input" data-size='large' name="firstname" placeholder="First Name" type="text">
-                <input class="input" data-size='large' name="lastname" placeholder="Last Name" type="text">
+                <input class="input" data-size='large' name="password" placeholder="Contraseña" type="password">
+                <input class="input" data-size='large' name="firstname" placeholder="Nombres" type="text">
+                <input class="input" data-size='large' name="lastname" placeholder="Apellidos" type="text">
                 <select class="input" name="gender">
                     <option selected disabled>Género</option>
                     <option value="Male">Masculino</option>
@@ -61,7 +61,7 @@
                     <span class="line"></span>
                 </div>
                 <input class="input" data-size='large' name="email" placeholder="Email" type="text">
-                <input class="input" data-size='large' name="password" placeholder="Password" type="password">
+                <input class="input" data-size='large' name="password" placeholder="Contraseña" type="password">
                 <input class="button-solid" data-size='large' data-color='red' data-expand='true' value="Ingresar"
                        type="submit">
 
