--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -28,7 +28,7 @@
 					</div>
 				</a>
 			{% else %}
-				<a class="skinny-menu__item" href="/login">
+				<a class="skinny-menu__item" href="/auth/login">
 					<i class="skinny-menu__item__icon fa fa-user"></i>
 					<span class="skinny-menu__item__text">Sign in</span>
 				</a>
