--- a/app/views/partials/login.html
+++ b/app/views/partials/login.html
@@ -39,7 +39,7 @@
 			</p>
 		</form>
 
-		<form class="login__form">
+		<form class="login__form" style="display: none;">
 			<a href="#" class="facebook-button" data-expand='true'>
 				<i class="fa fa-facebook-official"></i>&nbsp; Ingresar con Facebook
 			</a>
@@ -54,7 +54,7 @@
 			<p class="italic-text" data-size="small">Recordar contraseña</p>
 		</form>
 
-		<form class="login__form">
+		<form class="login__form" style="display: none;">
 			<p class="separator-text">
 				<span class="line"></span>
 				<span class="text">Recordar contraseña</span>
