--- a/app/views/partials/users.html
+++ b/app/views/partials/users.html
@@ -3,9 +3,9 @@
 ********************************************************************* -->
 <section class="users">
 	{% for user in users %}
-	<div class="user-wrapper">				
+	<div class="user-wrapper">
 		<article class="user">
-			<a class="user-header" href="#"> 
+			<a class="user-header" href="#">
 				<div class="avatar">
 					<img src="{{ user.photo }}">
 				</div>
@@ -15,10 +15,26 @@
 				</div>
 			</a>
 			<div class="user-works">
-
 				{% for work in user.Works %}
 					<div class="work" style="background-image: url('{{ work.photo }}');"></div>
 				{% endfor %}
+			</div>
+			<div class="user-follow">
+				{% if user.following %}
+					<button class="button-liner disabled" data-following="true" data-size='small'>
+				{% else %}
+					<button class="button-liner" data-following="false" data-size='small'>
+				{% endif %}
+						<span class="button-liner__action folllow">Seguir</span>
+						<span class="button-liner__action following"><i class="fa fa-check"></i> Siguiendo</span>
+						<span class="button-liner__action cancel"><i class="fa fa-times-circle"></i> Cancelar</span>
+						<span class="button-liner__number">{{ user.followers }}</span>
+					</button>
+			</div>
+		</article>
+	</div>
+	{% endfor %}
+</section>
 
 			<!-- {% if user.Works[0] %}
 				<div class="work" style="background-image: url('{{ user.Works[0].photo }}');"></div>
@@ -55,22 +71,3 @@
 			{% else %}
 				<div class="work" style="background: #ccc; border: 1px solid white;"></div>
 			{% endif %} -->
-
-			</div>
-			<div class="user-follow">
-				{% if user.following %}
-					<button class="button-liner disabled js-followButton" data-following="true" data-userId="{{ user.id }}" data-size='small'>
-				{% else %}
-					<button class="button-liner js-followButton" data-following="false" data-userId="{{ user.id }}" data-size='small'>
-				{% endif %}
-					<span class="button-liner__action folllow">Seguir</span>
-					<span class="button-liner__action following"><i class="fa fa-check"></i> Siguiendo</span>
-					<span class="button-liner__action cancel"><i class="fa fa-times-circle"></i> Cancelar</span>
-					<span class="button-liner__number">{{ user.followers }}</span>
-				</button>
-			</div>
-
-		</article>
-	</div>
-	{% endfor %}
-</section>
