--- a/public/stylus/objects/products.styl
+++ b/public/stylus/objects/products.styl
@@ -9,6 +9,37 @@
 	.product-wrapper
 		padding .5rem
 
+.product
+	border 1px solid #ddd
+	position relative
+	transition box-shadow ease-in-out 125ms
+	.product-info
+		border-bottom: 1px dashed #e6e8ec
+		padding .5em 1em
+		display flex
+		justify-content space-between
+		.title
+			font-size .8em
+			letter-spacing 1px
+			font-family 'Raleway'
+		.price
+			font-size .9em
+			font-weight 500
+			letter-spacing .5px
+			font-family 'Raleway'
+			// color #5794db
+	.product-social
+		padding .5em 1em
+		display flex
+		justify-content space-between
+		.price
+			font-size .9em
+			font-weight 500
+			letter-spacing .5px
+			font-family 'Raleway'
+	&:hover
+		box-shadow rgba(0,0,0,0.35) 0 0 10px
+
 // product-width = 200px
 product-width = 180px
 
