get facebok fata

--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -26,7 +26,11 @@
 				</div>
 			</a>
 		{% else %}
-			<a class="skinny-menu__item" href="/auth/login">
+			<a class="skinny-menu__item {% if path == 'signup' %} active {% endif %}" href="/auth/signup">
+				<i class="skinny-menu__item__icon fa fa-user"></i>
+				<span class="skinny-menu__item__text">Sign Up</span>
+			</a>
+			<a class="skinny-menu__item {% if path == 'login' %} active {% endif %}" href="/auth/login">
 				<i class="skinny-menu__item__icon fa fa-user"></i>
 				<span class="skinny-menu__item__text">Sign in</span>
 			</a>
