--- a/app/views/partials/login.html
+++ b/app/views/partials/login.html
@@ -5,64 +5,88 @@
 	<div class="login">
 		<header class="login__header">
 			<div class="skinny-menu">
-				<a class="skinny-menu__item">Ingresar</a>
-				<a class="skinny-menu__item">Registrarme</a>
+				{% if path == 'signup' %}
+					<a class="skinny-menu__item active" href="/auth/signup">Registrarme</a>
+					<a class="skinny-menu__item" href="/auth/login">Ingresar</a>
+				{% elseif path == 'login' %}
+					<a class="skinny-menu__item" href="/auth/signup">Registrarme</a>
+					<a class="skinny-menu__item active" href="/auth/login">Ingresar</a>
+				{% endif %}
 			</div>
 		</header>
 
-		<form class="login__form">
-			<a href="#" class="facebook-button" data-expand='true'>
-				<i class="fa fa-facebook-official"></i>&nbsp; Registrarme con Facebook
-			</a>
-			<p class="separator-text">
-				<span class="line"></span>
-				<span class="text">Con email</span>
-				<span class="line"></span>
-			</p>
-			<input class="input" data-size='large' name="username" placeholder="Nombre de usuario" type="text">
-			<input class="input" data-size='large' name="email" placeholder="Email" type="email">
-			<input class="input" data-size='large' name="password" placeholder="Contraseña" type="password">
-			<input class="input" data-size='large' name="firstname" placeholder="Nombres" type="text">
-			<input class="input" data-size='large' name="lastname" placeholder="Apellidos" type="text">
-			<select class="input" name="gender">
-				<option selected disabled>Género</option>
-				<option value="Male">Masculino</option>
-				<option value="Female">Femenino</option>
-			</select>
-			<div class="question">
-				<input name="question" type="checkbox" id="question">
-				<label for="question" class="medium-text">¿Eres Artista profesional?</label>
-			</div>
-			<input class="button-solid" data-size='large' data-color='red' data-expand='true' value="Registrarme" type="submit">
-			<p class="italic-text" data-size="small">
-				Al registrarte estas aceptando los <strong>terminos y condiciones</strong> de Arte Manifiesto
-			</p>
-		</form>
+		{% if path == 'signup' %}
+			<form class="login__form">
+				<a href="/auth/facebook" class="facebook-button" data-expand='true'>
+					<i class="fa fa-facebook-official"></i>&nbsp; Registrarme con Facebook
+				</a>
+				<p class="separator-text">
+					<span class="line"></span>
+					<span class="text">Con email</span>
+					<span class="line"></span>
+				</p>
+				
+				{% if profile %}
+					<input class="input" data-size='large' name="username" placeholder="Nombre de usuario" type="text">
+					<input class="input" data-size='large' name="email" placeholder="Email" type="email" value="{{profile.email}}">
+					<input class="input" data-size='large' name="password" placeholder="Contraseña" type="password">
+					<input class="input" data-size='large' name="firstname" placeholder="Nombres" type="text" value="{{profile.first_name + ' ' + profile.middle_name}}">
+					<input class="input" data-size='large' name="lastname" placeholder="Apellidos" type="text" value="{{profile.last_name}}">
+					<select class="input" name="gender">
+						<option disabled>Género</option>
+						<option value="Male" {% if profile.gender === 'male' %}selected{% endif %}>Masculino</option>
+						<option value="Female" {% if profile.gender === 'female' %}selected{% endif %}>Femenino</option>
+					</select>
+				{% else %}
+					<input class="input" data-size='large' name="username" placeholder="Nombre de usuario" type="text">
+					<input class="input" data-size='large' name="email" placeholder="Email" type="email">
+					<input class="input" data-size='large' name="password" placeholder="Contraseña" type="password">
+					<input class="input" data-size='large' name="firstname" placeholder="Nombres" type="text">
+					<input class="input" data-size='large' name="lastname" placeholder="Apellidos" type="text">
+					<select class="input" name="gender">
+						<option selected disabled>Género</option>
+						<option value="Male">Masculino</option>
+						<option value="Female">Femenino</option>
+					</select>
+				{% endif %}
+				 
+				{% autoescape false %}{{ recaptcha }}{% endautoescape %}
+				<div class="question">
+					<input name="question" type="checkbox" id="question">
+					<label for="question" class="medium-text">¿Eres Artista profesional?</label>
+				</div>
+				<input class="button-solid" data-size='large' data-color='red' data-expand='true' value="Registrarme" type="submit">
+				<p class="italic-text" data-size="small">
+					Al registrarte estas aceptando los <strong>terminos y condiciones</strong> de Arte Manifiesto
+				</p>
+			</form>
+		{% elseif path == 'login' %}
+			<form class="login__form">
+				<a href="#" class="facebook-button" data-expand='true'>
+					<i class="fa fa-facebook-official"></i>&nbsp; Ingresar con Facebook
+				</a>
+				<p class="separator-text">
+					<span class="line"></span>
+					<span class="text">Con email</span>
+					<span class="line"></span>
+				</p>
+				<input class="input" data-size='large' name="email" placeholder="Email" type="text">
+				<input class="input" data-size='large' name="password" placeholder="Contraseña" type="password">
+				<input class="button-solid" data-size='large' data-color='red' data-expand='true' value="Ingresar" type="submit">
+				<p class="italic-text" data-size="small">Recordar contraseña</p>
+			</form>
 
-		<form class="login__form" style="display: none;">
-			<a href="#" class="facebook-button" data-expand='true'>
-				<i class="fa fa-facebook-official"></i>&nbsp; Ingresar con Facebook
-			</a>
-			<p class="separator-text">
-				<span class="line"></span>
-				<span class="text">Con email</span>
-				<span class="line"></span>
-			</p>
-			<input class="input" data-size='large' name="email" placeholder="Email" type="text">
-			<input class="input" data-size='large' name="password" placeholder="Contraseña" type="password">
-			<input class="button-solid" data-size='large' data-color='red' data-expand='true' value="Ingresar" type="submit">
-			<p class="italic-text" data-size="small">Recordar contraseña</p>
-		</form>
+			<form class="login__form">
+				<p class="separator-text">
+					<span class="line"></span>
+					<span class="text">Recordar contraseña</span>
+					<span class="line"></span>
+				</p>
+				<input class="input" data-size='large' name="email" placeholder="Email" type="text">
+				<input class="button-solid" data-size='large' data-color='red' data-expand='true' value="Recordar" type="submit">
+				<p class="italic-text" data-size="small">Ingresar</p>
+			</form>
+		{% endif %}
 
-		<form class="login__form" style="display: none;">
-			<p class="separator-text">
-				<span class="line"></span>
-				<span class="text">Recordar contraseña</span>
-				<span class="line"></span>
-			</p>
-			<input class="input" data-size='large' name="email" placeholder="Email" type="text">
-			<input class="button-solid" data-size='large' data-color='red' data-expand='true' value="Recordar" type="submit">
-			<p class="italic-text" data-size="small">Ingresar</p>
-		</form>
 	</div>
 </section>
