add preloaders in signup

--- a/app/views/partials/login.html
+++ b/app/views/partials/login.html
@@ -17,6 +17,7 @@
 
 		{% if path == 'signup' %}
 			<form class="login__form js-signUpForm">
+				<div class="loading"><i class="fa fa-spinner"></i></div>
 				<a href="/auth/facebook" class="facebook-button" data-expand='true'>
 					<i class="fa fa-facebook-official"></i>&nbsp; Registrarme con Facebook
 				</a>
