--- a/app/views/partials/login.html
+++ b/app/views/partials/login.html
@@ -50,8 +50,8 @@
 						<option value="Female">Femenino</option>
 					</select>
 				{% endif %}
-				 
-				{% autoescape false %}{{ recaptcha }}{% endautoescape %}
+				<div class="g-recaptcha" data-sitekey="6LcbDwcTAAAAAIexPkpMRGp4fTveLvMzll_XPH3Q"></div>
+				
 				<div class="question">
 					<input name="question" type="checkbox" id="question">
 					<label for="question" class="medium-text">¿Eres Artista profesional?</label>
