--- a/app/views/auth/login.html
+++ b/app/views/auth/login.html
@@ -13,6 +13,7 @@
 
 {% block scripts %}
 
+	<script type="text/javascript" src="/js/vendor/jquery.min.js"></script>
 	<script type="text/javascript" src="/js/login.js"></script>
 
 {% endblock %}
