--- a/public/css/products.css
+++ b/public/css/products.css
@@ -701,13 +701,13 @@ body {
 }
 @media (min-width: 1100px) {
   .section__workspace__elements.moveLeft {
-    padding-left: 12rem;
+    padding-left: 10rem;
   }
   .section__workspace__elements.moveRight {
-    padding-right: 12rem;
+    padding-right: 10rem;
   }
   .filter {
-    width: 11rem;
+    width: 9rem;
   }
 }
 @media (min-width: 720px) {
@@ -1025,5 +1025,37 @@ body {
     -ms-flex: 1 20%;
     flex: 1 20%;
     max-width: 20%;
+  }
+}
+@media screen and (min-width: 1100px) {
+  .products.moveLeft .product-wrapper {
+    -webkit-box-flex: 1;
+    -moz-box-flex: 1;
+    -o-box-flex: 1;
+    box-flex: 1;
+    -webkit-flex: 1 25%;
+    -ms-flex: 1 25%;
+    flex: 1 25%;
+    max-width: 25%;
+  }
+  .products.moveRight .product-wrapper {
+    -webkit-box-flex: 1;
+    -moz-box-flex: 1;
+    -o-box-flex: 1;
+    box-flex: 1;
+    -webkit-flex: 1 25%;
+    -ms-flex: 1 25%;
+    flex: 1 25%;
+    max-width: 25%;
+  }
+  .products.moveLeft.moveRight .product-wrapper {
+    -webkit-box-flex: 1;
+    -moz-box-flex: 1;
+    -o-box-flex: 1;
+    box-flex: 1;
+    -webkit-flex: 1 33.333%;
+    -ms-flex: 1 33.333%;
+    flex: 1 33.333%;
+    max-width: 33.333%;
   }
 }
