--- a/public/css/users.css
+++ b/public/css/users.css
@@ -701,13 +701,13 @@ body {
 }
 @media (min-width: 1100px) {
   .section__workspace__elements.moveLeft {
-    padding-left: 12rem;
+    padding-left: 10rem;
   }
   .section__workspace__elements.moveRight {
-    padding-right: 12rem;
+    padding-right: 10rem;
   }
   .filter {
-    width: 11rem;
+    width: 9rem;
   }
 }
 @media (min-width: 720px) {
@@ -1058,7 +1058,9 @@ body {
     flex: 1 20%;
     max-width: 20%;
   }
-  .users.smallLeft .user-wrapper {
+}
+@media screen and (min-width: 1100px) {
+  .users.moveLeft .user-wrapper {
     -webkit-box-flex: 1;
     -moz-box-flex: 1;
     -o-box-flex: 1;
@@ -1068,7 +1070,7 @@ body {
     flex: 1 25%;
     max-width: 25%;
   }
-  .users.smallRight .user-wrapper {
+  .users.moveRight .user-wrapper {
     -webkit-box-flex: 1;
     -moz-box-flex: 1;
     -o-box-flex: 1;
@@ -1078,7 +1080,7 @@ body {
     flex: 1 25%;
     max-width: 25%;
   }
-  .users.smallLeft.smallRight .user-wrapper {
+  .users.moveLeft.moveRight .user-wrapper {
     -webkit-box-flex: 1;
     -moz-box-flex: 1;
     -o-box-flex: 1;
