--- a/public/stylus/objects/products.styl
+++ b/public/stylus/objects/products.styl
@@ -68,3 +68,18 @@ product-width = 180px
 		.product-wrapper
 			flex 1 20%
 			max-width 20%
+			
+@media screen and (min-width: max-width)
+	.products.moveLeft
+		.product-wrapper
+			flex 1 25%
+			max-width 25%
+	.products.moveRight
+		.product-wrapper
+			flex 1 25%
+			max-width 25%
+
+	.products.moveLeft.moveRight
+		.product-wrapper
+			flex 1 33.333%
+			max-width 33.333%
