--- a/public/stylus/objects/users.styl
+++ b/public/stylus/objects/users.styl
@@ -77,18 +77,18 @@ user-width = 180px
 		.user-wrapper
 			flex 1 20%
 			max-width 20%
-			
-	.users.smallLeft
+
+@media screen and (min-width: max-width)
+	.users.moveLeft
 		.user-wrapper
 			flex 1 25%
 			max-width 25%
-			
-	.users.smallRight
+	.users.moveRight
 		.user-wrapper
 			flex 1 25%
 			max-width 25%
-			
-	.users.smallLeft.smallRight
+
+	.users.moveLeft.moveRight
 		.user-wrapper
 			flex 1 33.333%
 			max-width 33.333%
