--- a/public/css/login.css
+++ b/public/css/login.css
@@ -558,18 +558,18 @@ body {
 .button-liner.disabled:hover .button-liner__action.cancel {
   display: table-cell;
 }
-.login-container {
+.auth-container {
   margin: auto;
   max-width: 400px;
 }
-.login {
+.auth {
   position: relative;
   margin: 1.5rem 1rem;
   padding: 1rem 1.5rem;
   -webkit-box-shadow: rgba(0,0,0,0.35) 0 0 10px;
   box-shadow: rgba(0,0,0,0.35) 0 0 10px;
 }
-.login__header {
+.auth__header {
   display: -webkit-box;
   display: -moz-box;
   display: -webkit-flex;
@@ -584,15 +584,30 @@ body {
   -webkit-justify-content: center;
   justify-content: center;
 }
-.login__form .facebook-button {
+.auth__form .facebook-button {
   margin: 1rem 0;
 }
-.login__form .input,
-.login__form .separator-text,
-.login__form .button-solid {
+.auth__form .input,
+.auth__form .separator-text,
+.auth__form .button-solid {
   margin: 0.5rem 0;
 }
-.login__form .question {
+.auth__form .username-error,
+.auth__form .email-error,
+.auth__form .password-error,
+.auth__form .firstname-error,
+.auth__form .lastname-error {
+  color: #f54545;
+  margin-top: -0.5rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-family: 'Raleway';
+  font-size: 0.8rem;
+  padding: 0.5rem 0.25rem;
+  display: none;
+  letter-spacing: 0.5px;
+}
+.auth__form .question {
   display: -webkit-box;
   display: -moz-box;
   display: -webkit-flex;
@@ -607,25 +622,29 @@ body {
   -webkit-align-items: center;
   align-items: center;
 }
-.login__form .note {
+.auth__form .note {
   margin: 1rem 0;
 }
-.login__form .loading {
+.auth__form .loading {
   text-align: center;
   font-size: 1.5rem;
   color: #aaa;
   margin: 1rem;
   display: none;
 }
-.login__form .loading .fa {
+.auth__form .loading .fa {
   -webkit-animation: 1.5s circle infinite;
   -moz-animation: 1.5s circle infinite;
   -o-animation: 1.5s circle infinite;
   -ms-animation: 1.5s circle infinite;
   animation: 1.5s circle infinite;
 }
-.login__form .loading.visible {
+.auth__form .loading.visible {
   display: block;
+}
+.auth__form .g-recaptcha {
+  display: table;
+  margin: auto;
 }
 @-moz-keyframes circle {
   0% {
