--- a/app/views/auth/signup.html
+++ b/app/views/auth/signup.html
@@ -23,6 +23,10 @@
 	</script>
 	
 	<script type="text/javascript" src="/js/vendor/jquery.min.js"></script>
+	
+	<script type="text/javascript" src="/js/lib/flash-message.js"></script>
+	<script type="text/javascript" src="/js/lib/auth.js"></script>
+
 	<script type="text/javascript" src="/js/signup.js"></script>
 
 {% endblock %}
