--- a/public/stylus/login.styl
+++ b/public/stylus/login.styl
@@ -6,4 +6,5 @@
 @import 'elements/inputs.styl'
 @import 'elements/buttons.styl'
 
+@import 'objects/flash-message.styl'
 @import 'objects/login.styl'
