--- a/public/stylus/objects/flash-message.styl
+++ b/public/stylus/objects/flash-message.styl
@@ -20,5 +20,7 @@
 		letter-spacing 1px
 	.fa
 		position absolute
-		top .5rem
-		right .5rem
+		top 0
+		right 0
+		cursor pointer
+		padding .5rem
