remove auth menu

--- a/app/views/partials/auth.html
+++ b/app/views/partials/auth.html
@@ -1,9 +1,9 @@
 <!-- ********************************************************************
-    $ LOGIN
+    $ AUTH
 ********************************************************************* -->
 <section class="auth-container">
 	<div class="auth">
-		<header class="auth__header">
+		<!-- <header class="auth__header">
 			<div class="skinny-menu">
 				{% if path == 'signup' %}
 					<a class="skinny-menu__item active" href="/auth/signup">Registrarme</a>
@@ -13,7 +13,7 @@
 					<a class="skinny-menu__item active" href="/auth/login">Ingresar</a>
 				{% endif %}
 			</div>
-		</header>
+		</header> -->
 
 		{% if path == 'signup' %}
 			<form class="auth__form">
