--- a/app/views/auth/signup.html
+++ b/app/views/auth/signup.html
@@ -7,8 +7,10 @@
 
 {% block elements %}
 
-	{% include '../partials/auth.html' %}
-
+	<div class="background-container">
+		{% include '../partials/auth.html' %}
+	</div>
+	
 {% endblock %}
 
 
