--- a/public/css/login.css
+++ b/public/css/login.css
@@ -397,6 +397,32 @@ body {
   -webkit-flex: 1;
   -ms-flex: 1;
   flex: 1;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -moz-box-orient: vertical;
+  -o-box-orient: vertical;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+.background-container {
+  -webkit-box-flex: 1;
+  -moz-box-flex: 1;
+  -o-box-flex: 1;
+  box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  background-image: url("/img/background1.jpg");
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  background-position: center center;
 }
 .input {
   font-size: 1rem;
@@ -599,6 +625,7 @@ body {
   padding: 1rem 1.5rem;
   -webkit-box-shadow: rgba(0,0,0,0.35) 0 0 10px;
   box-shadow: rgba(0,0,0,0.35) 0 0 10px;
+  background: rgba(255,255,255,0.8);
 }
 .auth__header {
   display: -webkit-box;
