--- a/public/stylus/objects/login.styl
+++ b/public/stylus/objects/login.styl
@@ -9,6 +9,7 @@
 	margin 1.5rem 1rem
 	padding 1rem 1.5rem
 	box-shadow rgba(0,0,0,0.35) 0 0 10px
+	background rgba(white, .8)
 	&__header
 		display flex
 		padding .5rem
